Fix title and one spacing

--- a/style.css
+++ b/style.css
@@ -77,12 +77,13 @@ h2 {
   font-size: 1.4rem;
   font-weight: 700;
   margin-bottom: 10px;
+  color: var(--secondary-color);
 }
 
 h3 {
   font-size: 1.1rem;
   font-weight: 900;
-  color: var(--text-color);
+  color: var(--secondary-color);
 }
 
 p {
